= Change log
List of notable changes to this project.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog], +
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== link:tree/master[Current version]
=== Added
* `Generator` interface for generating random values
* `randomSequence` helper to easily create a random (yet predictable) sequence of value
* `forAll` and `checkForAll` function to assess a property of the system under test.
* `withSample` and `withNull` to inject constants values to be always tested